--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@devexpress/dx-react-core": "^2.7.6",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.3.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
     "@mui/styled-engine-sc": "^5.3.0",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
@@ -16,16 +17,20 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.33.0",
     "axios": "^0.25.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "recoil": "^0.6.1",
     "request": "^2.88.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:prod": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
