portfolio, setting 수정
투자 그래프까지 완료.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Upbit Auto Trading",
+  "name": "website for upbit auto trading",
   "icons": [
     {
       "src": "favicon.ico",
