--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.3.1",
     "@mui/styled-engine-sc": "^5.3.0",
+    "@mui/x-data-grid": "^5.5.1",
     "@nivo/core": "^0.79.0",
     "@nivo/line": "^0.79.1",
     "@testing-library/jest-dom": "^5.16.1",
